# epic

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: 3ag.bag  3ag_range_noise.bag
demo/: 6_agent_geometry.json  multi_agent_dynamic.py
epic/config/: _mpibvs.py  f1_mpc.json  f2_mpc.json
epic/control/: basic.py  ibfc.py  ibrc.py  ibvs.py  mpibvs.py  mprvs.py
epic/model/: _cartesian.py  _imaging.py  generalized.py
epic/plotting/: plotter.py  sim_plotter.py
epic/utils/: geometry.py  veronese.py
test/: TESTS.md  test_cartesian_geometry.py  test_imaging_fwd_inv_projection.py  test_leader_feature_prediction_f1.py  test_leader_feature_prediction_f2.py  test_leader_prediction.py
test/control/: generic_visual_servo.py  test_f1_convergence.py  test_f1_static_case.py  test_f2_convergence.py  test_f2_static_case.py  test_image_based_ctl.py  test_image_based_ctl_track.py  test_range_based_ctl.py
test/derivations/: test_barreto_derivations.py  test_barreto_servoing.ipynb  test_caron_servoing.ipynb  test_image_models.py  test_interaction_matrix_pph.ipynb  test_my_Lmat_derivations.py
test/image/: test_essentialm_estimator.py  test_framework_image_models.py  test_image_prediction.py  test_parabolas_coeffs.py  test_parabolas_intersections.py
