[tool.poetry]
name = "epic"
version = "0.1.0"
description = ""
authors = ["Pedro Roque <padr@kth.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "1.24.0"
scipy = "^1.6.0"
joblib = "^1.3.2"
matplotlib = "^3.7.2"
pyquaternion = "^0.9.9"
termcolor = "^2.3.0"
sympy = "^1.12"
opencv-python = "^4.8.0.76"
black = "^23.9.1"
pyyaml = "^6.0.1"
pytransform3d = "^3.4.0"
casadi = "^3.6.3"
ipympl = "^0.9.3"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
